--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,34 @@
 li {
     color: rgb(12, 121, 121);
 }
-h1{
+
+h1 {
     color: brown;
     font-weight: bold;
+}
+
+.bg-green {
+    color: goldenrod;
+    font-weight: bolder;
+    background-color: pink;
+}
+
+.bg-red {
+    color: red;
+    background-color: antiquewhite;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: lighter;
+}
+
+.styles {
+    background-color: beige;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bolder;
+    font-size: 2rem;
+    text-align: justify;
+    gap: 20px;
+    border-radius: 15px;
+    padding: 20px;
+    margin-bottom: 20px;
+
 }
